--- a/pom.xml
+++ b/pom.xml
@@ -6,4 +6,25 @@
   <version>1.0-SNAPSHOT</version>
   <name>Archetype - Texter</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <maven.compiler.source>18</maven.compiler.source>
+    <maven.compiler.target>18</maven.compiler.target>
+  </properties>
+
+  <repositories>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.github.demidko</groupId>
+      <artifactId>aot</artifactId>
+      <version>2022.11.28</version>
+    </dependency>
+  </dependencies>
+
+
 </project>
