feat: Add JSoup to Maven pom

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
       <artifactId>aot</artifactId>
       <version>2022.11.28</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.16.1</version>
+    </dependency>
+
   </dependencies>
 
 
